# flash-topk-attention

./: .autotune_cache.json  .gitignore  BENCHMARK.md  BENCHMARK_CN.md  LICENSE  README.md  README_CN.md  V2_BENCHMARK.md  V2_BENCHMARK_CN.md  benchmark.md  pyproject.toml
flash_topk_attn/: __init__.py  attention.py  attention_per_query.py  attention_qblock_shared_candidates.py  attention_reverse_index_chunked.py  attention_reverse_index_chunked_kv_tile.py  attention_reverse_index_two_stage.py  heuristic.py  scoring.py
flash_topk_attn_v2/: __init__.py  api.py  block_score.py  block_score_cuda.py  build_reverse_indices_cuda.py  qblock_merge.py  sort_by_count_cuda.py  sparse_attn.py  sparse_attn_bwd.py  sparse_attn_bwd_dkv_cuda.py  sparse_attn_bwd_dq_cuda.py  sparse_attn_cuda.py  topk_select.py  topk_select_cuda.py
flash_topk_attn_v2/csrc/: block_score.cpp  block_score_kernel.cu  build_reverse_indices.cpp  build_reverse_indices_kernel.cu  qblock_merge.cpp  qblock_merge_kernel.cu  sort_by_count.cpp  sort_by_count_kernel.cu  sparse_attn.cpp  sparse_attn_bwd_dkv.cpp  sparse_attn_bwd_dkv_kernel.cu  sparse_attn_bwd_dkv_kernel.cuh  sparse_attn_bwd_dq.cpp  sparse_attn_bwd_dq_kernel.cu  sparse_attn_bwd_dq_kernel.cuh  sparse_attn_kernel.cu  sparse_attn_kernel.cuh  topk_select.cpp  topk_select_kernel.cu
ops/: __init__.py
ops/flash_scoring/: __init__.py  naive.py  triton_impl.py
