[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-topk-attention"
version = "0.1.0"
description = "Flash Attention with TopK Block Scoring — efficient topk sparse KV selection via Triton"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "YouHuang67", email = "youhuang0607@gmail.com"}
]
keywords = ["flash-attention", "triton", "topk", "sparse-attention", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.5.0, <2.7.0",
    "triton>=3.0.0",
    "tilelang>=0.1.7",
    "einops>=0.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=7.0.0",
    "ipdb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flash_topk_attn*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
